# dummy-test

./: Cargo.toml  renovate.json
.github/workflows/: notify_release.yml
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
